--- a/Narcolepsy.App/wwwroot/index.html
+++ b/Narcolepsy.App/wwwroot/index.html
@@ -6,7 +6,8 @@
 	<title>Narcolepsy</title>
 	<base href="/" />
 	<link href="css/app.css" rel="stylesheet" />
-	<link href="Narcolepsy.App.styles.css" rel="stylesheet" />
+    <link href="Narcolepsy.App.styles.css" rel="stylesheet" />
+    <script src="index.js"></script>
 </head>
 
 <body>
