--- a/Narcolepsy.LogConsole/wwwroot/logs.html
+++ b/Narcolepsy.LogConsole/wwwroot/logs.html
@@ -6,10 +6,34 @@
     <title>Narcolepsy Log Console</title>
     <base href="/" />
     <link href="Narcolepsy.LogConsole.styles.css" rel="stylesheet" />
+    <script src="logs.js"></script>
     <style>
         html {
             background: #212121;
             color: #c8c8c8;
+        }
+
+        html, body, #app {
+            height: 100%;
+        }
+
+        body {
+            display: flex;
+            margin: 0;
+            overflow: hidden;
+        }
+
+        ::-webkit-scrollbar-corner {
+            background: #212121;
+        }
+
+        ::-webkit-scrollbar {
+            height: 8px;
+            width: 8px;
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background: rgba(255,255,255,0.15);
         }
     </style>
 </head>
